Resolves: tdf#117183 exclude stock buttons from missing mnemonics

Change-Id: Ib19f98e398216e8e240918fd82ac19c24b551709
Reviewed-on: https://gerrit.libreoffice.org/53362
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>